@startuml
skinparam groupInheritance 1


Equipamiento <|-- SinEquipamiento
Equipamiento <|-- Casco
Equipamiento <|-- Armadura
Equipamiento <|-- EscudoYEspada
Equipamiento <|-- Llave

SinEquipamiento .> Casco
Casco .> Armadura
Armadura .> EscudoYEspada
EscudoYEspada .> Llave

abstract class Equipamiento{
    + {abstract} actualizar() : Equipamiento
    + {abstract} resistirAtaque( :Gladiador)
    + {abstract} abrirPuerta( :Gladiador, :Camino) : boolean
}

class SinEquipamiento{
    + actualizar() : Equipamiento
    + resistirAtaque( :Gladiador)
    + abrirPuerta( :Gladiador, :Camino) : boolean
}

class Casco{
    + actualizar() : Equipamiento
    + resistirAtaque( :Gladiador)
    + abrirPuerta( :Gladiador, :Camino) : boolean
}

class Armadura{
    + actualizar() : Equipamiento
    + resistirAtaque( :Gladiador)
    + abrirPuerta( :Gladiador, :Camino) : boolean
}

class EscudoYEspada{
    + actualizar() : Equipamiento
    + resistirAtaque( :Gladiador)
    + abrirPuerta( :Gladiador, :Camino) : boolean
}

class Llave {
    + actualizar() : Equipamiento
    + resistirAtaque( :Gladiador)
    + abrirPuerta( :Gladiador, :Camino) : boolean
}


@enduml